OpenMud.Mudpiler.Compiler.DmeGrammar/.antlr/DmeParser.java
// Generated from c:/Users/jerem/source/repos/OpenMud/OpenMud.Mudpiler.Compiler.DmeGrammar/DmeParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DmeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SHARP=1, STRING_BEGIN=2, MULTILINE_STRING_BEGIN=3, RESOURCE_BEGIN=4, LINE_COMMENT=5, 
		BEGIN_MULTILINE_COMMENT=6, START_CODE_EXPR=7, END_CODE_EXPR=8, CODE=9, 
		END_MULTILINE_COMMENT=10, BEGIN_NESTED_MULTILINE_COMMENT=11, COMMENT=12, 
		MULTILINE_STRING_END=13, BEGIN_ML_STRING_EXPRESSION=14, STRING_NEXT_LINE=15, 
		STRING_END=16, BEGIN_STRING_EXPRESSION=17, STRING_CONTENTS=18, RESOURCE_END=19, 
		RESOURCE_CONTENTS=20, IMPORT=21, INCLUDE=22, PRAGMA=23, DEFINE=24, DEFINED=25, 
		IF=26, ELIF=27, ELSE=28, UNDEF=29, IFDEF=30, IFNDEF=31, ENDIF=32, TRUE=33, 
		FALSE=34, ERROR=35, BANG=36, LPAREN=37, RPAREN=38, EQUAL=39, NOTEQUAL=40, 
		AND=41, OR=42, LT=43, GT=44, LE=45, GE=46, DIRECTIVE_WHITESPACES=47, DIRECTIVE_STRING=48, 
		CONDITIONAL_SYMBOL=49, DECIMAL_LITERAL=50, FLOAT=51, NEW_LINE=52, DIRECITVE_COMMENT=53, 
		DIRECITVE_LINE_COMMENT=54, DIRECITVE_NEW_LINE=55, DIRECITVE_TEXT_NEW_LINE=56, 
		TEXT=57, CURLY_BRACE_OPEN=58, CURLY_BRACE_CLOSE=59, CODE_DIV=60, COMMENT_STAR=61, 
		MULTILINE_STRING_EXPRESSION_AESCAPE_ESCAPE1=62, MULTILINE_STRING_EXPRESSION_AESCAPE_ESCAPE2=63, 
		MULTILINE_STRING_EXPRESSION_AESCAPE_ESCAPE3=64;
	public static final int
		RULE_dmlDocument = 0, RULE_text = 1, RULE_comment_block = 2, RULE_comment_contents = 3, 
		RULE_string = 4, RULE_resource = 5, RULE_string_contents = 6, RULE_string_expression = 7, 
		RULE_string_expression_begin = 8, RULE_code_expr = 9, RULE_code_block = 10, 
		RULE_code = 11, RULE_code_literal = 12, RULE_directive = 13, RULE_directive_text = 14, 
		RULE_preprocessor_expression = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"dmlDocument", "text", "comment_block", "comment_contents", "string", 
			"resource", "string_contents", "string_expression", "string_expression_begin", 
			"code_expr", "code_block", "code", "code_literal", "directive", "directive_text", 
			"preprocessor_expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#'", null, "'{\"'", null, null, null, null, "']'", null, "'*/'", 
			null, null, "'\"}'", null, null, null, null, null, null, null, null, 
			null, "'pragma'", null, "'defined'", "'if'", "'elif'", "'else'", "'undef'", 
			"'ifdef'", "'ifndef'", "'endif'", null, null, "'error'", "'!'", "'('", 
			"')'", "'=='", "'!='", "'&&'", "'||'", "'<'", "'>'", "'<='", "'>='", 
			null, null, null, null, null, null, null, null, null, null, null, "'{'", 
			null, null, "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SHARP", "STRING_BEGIN", "MULTILINE_STRING_BEGIN", "RESOURCE_BEGIN", 
			"LINE_COMMENT", "BEGIN_MULTILINE_COMMENT", "START_CODE_EXPR", "END_CODE_EXPR", 
			"CODE", "END_MULTILINE_COMMENT", "BEGIN_NESTED_MULTILINE_COMMENT", "COMMENT", 
			"MULTILINE_STRING_END", "BEGIN_ML_STRING_EXPRESSION", "STRING_NEXT_LINE", 
			"STRING_END", "BEGIN_STRING_EXPRESSION", "STRING_CONTENTS", "RESOURCE_END", 
			"RESOURCE_CONTENTS", "IMPORT", "INCLUDE", "PRAGMA", "DEFINE", "DEFINED", 
			"IF", "ELIF", "ELSE", "UNDEF", "IFDEF", "IFNDEF", "ENDIF", "TRUE", "FALSE", 
			"ERROR", "BANG", "LPAREN", "RPAREN", "EQUAL", "NOTEQUAL", "AND", "OR", 
			"LT", "GT", "LE", "GE", "DIRECTIVE_WHITESPACES", "DIRECTIVE_STRING", 
			"CONDITIONAL_SYMBOL", "DECIMAL_LITERAL", "FLOAT", "NEW_LINE", "DIRECITVE_COMMENT", 
			"DIRECITVE_LINE_COMMENT", "DIRECITVE_NEW_LINE", "DIRECITVE_TEXT_NEW_LINE", 
			"TEXT", "CURLY_BRACE_OPEN", "CURLY_BRACE_CLOSE", "CODE_DIV", "COMMENT_STAR", 
			"MULTILINE_STRING_EXPRESSION_AESCAPE_ESCAPE1", "MULTILINE_STRING_EXPRESSION_AESCAPE_ESCAPE2", 
			"MULTILINE_STRING_EXPRESSION_AESCAPE_ESCAPE3"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DmeParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DmeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DmlDocumentContext extends ParserRuleContext {
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public DmlDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlDocument; }
	}

	public final DmlDocumentContext dmlDocument() throws RecognitionException {
		DmlDocumentContext _localctx = new DmlDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dmlDocument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1022L) != 0)) {
				{
				{
				setState(32);
				text();
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextContext extends ParserRuleContext {
		public TerminalNode SHARP() { return getToken(DmeParser.SHARP, 0); }
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public List<TerminalNode> NEW_LINE() { return getTokens(DmeParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(DmeParser.NEW_LINE, i);
		}
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public Comment_blockContext comment_block() {
			return getRuleContext(Comment_blockContext.class,0);
		}
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_text);
		int _la;
		try {
			setState(48);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SHARP:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				match(SHARP);
				setState(39);
				directive();
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEW_LINE) {
					{
					{
					setState(40);
					match(NEW_LINE);
					}
					}
					setState(45);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case STRING_BEGIN:
			case MULTILINE_STRING_BEGIN:
			case RESOURCE_BEGIN:
			case START_CODE_EXPR:
			case END_CODE_EXPR:
			case CODE:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				code_block();
				}
				break;
			case LINE_COMMENT:
			case BEGIN_MULTILINE_COMMENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				comment_block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Comment_blockContext extends ParserRuleContext {
		public TerminalNode BEGIN_MULTILINE_COMMENT() { return getToken(DmeParser.BEGIN_MULTILINE_COMMENT, 0); }
		public TerminalNode END_MULTILINE_COMMENT() { return getToken(DmeParser.END_MULTILINE_COMMENT, 0); }
		public List<Comment_contentsContext> comment_contents() {
			return getRuleContexts(Comment_contentsContext.class);
		}
		public Comment_contentsContext comment_contents(int i) {
			return getRuleContext(Comment_contentsContext.class,i);
		}
		public TerminalNode LINE_COMMENT() { return getToken(DmeParser.LINE_COMMENT, 0); }
		public Comment_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment_block; }
	}

	public final Comment_blockContext comment_block() throws RecognitionException {
		Comment_blockContext _localctx = new Comment_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comment_block);
		int _la;
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEGIN_MULTILINE_COMMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(BEGIN_MULTILINE_COMMENT);
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==BEGIN_NESTED_MULTILINE_COMMENT || _la==COMMENT) {
					{
					{
					setState(51);
					comment_contents();
					}
					}
					setState(56);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(57);
				match(END_MULTILINE_COMMENT);
				}
				break;
			case LINE_COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				match(LINE_COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Comment_contentsContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(DmeParser.COMMENT, 0); }
		public TerminalNode BEGIN_NESTED_MULTILINE_COMMENT() { return getToken(DmeParser.BEGIN_NESTED_MULTILINE_COMMENT, 0); }
		public TerminalNode END_MULTILINE_COMMENT() { return getToken(DmeParser.END_MULTILINE_COMMENT, 0); }
		public List<Comment_contentsContext> comment_contents() {
			return getRuleContexts(Comment_contentsContext.class);
		}
		public Comment_contentsContext comment_contents(int i) {
			return getRuleContext(Comment_contentsContext.class,i);
		}
		public Comment_contentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment_contents; }
	}

	public final Comment_contentsContext comment_contents() throws RecognitionException {
		Comment_contentsContext _localctx = new Comment_contentsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comment_contents);
		int _la;
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(COMMENT);
				}
				break;
			case BEGIN_NESTED_MULTILINE_COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(BEGIN_NESTED_MULTILINE_COMMENT);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==BEGIN_NESTED_MULTILINE_COMMENT || _la==COMMENT) {
					{
					{
					setState(63);
					comment_contents();
					}
					}
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(69);
				match(END_MULTILINE_COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringContext extends ParserRuleContext {
		public TerminalNode STRING_BEGIN() { return getToken(DmeParser.STRING_BEGIN, 0); }
		public TerminalNode STRING_END() { return getToken(DmeParser.STRING_END, 0); }
		public List<String_contentsContext> string_contents() {
			return getRuleContexts(String_contentsContext.class);
		}
		public String_contentsContext string_contents(int i) {
			return getRuleContext(String_contentsContext.class,i);
		}
		public List<TerminalNode> STRING_NEXT_LINE() { return getTokens(DmeParser.STRING_NEXT_LINE); }
		public TerminalNode STRING_NEXT_LINE(int i) {
			return getToken(DmeParser.STRING_NEXT_LINE, i);
		}
		public TerminalNode MULTILINE_STRING_BEGIN() { return getToken(DmeParser.MULTILINE_STRING_BEGIN, 0); }
		public TerminalNode MULTILINE_STRING_END() { return getToken(DmeParser.MULTILINE_STRING_END, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_string);
		int _la;
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING_BEGIN:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(STRING_BEGIN);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 442368L) != 0)) {
					{
					{
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==STRING_NEXT_LINE) {
						{
						setState(73);
						match(STRING_NEXT_LINE);
						}
					}

					setState(76);
					string_contents();
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(82);
				match(STRING_END);
				}
				break;
			case MULTILINE_STRING_BEGIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(MULTILINE_STRING_BEGIN);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 442368L) != 0)) {
					{
					{
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==STRING_NEXT_LINE) {
						{
						setState(84);
						match(STRING_NEXT_LINE);
						}
					}

					setState(87);
					string_contents();
					}
					}
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(93);
				match(MULTILINE_STRING_END);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResourceContext extends ParserRuleContext {
		public TerminalNode RESOURCE_BEGIN() { return getToken(DmeParser.RESOURCE_BEGIN, 0); }
		public TerminalNode RESOURCE_END() { return getToken(DmeParser.RESOURCE_END, 0); }
		public List<TerminalNode> RESOURCE_CONTENTS() { return getTokens(DmeParser.RESOURCE_CONTENTS); }
		public TerminalNode RESOURCE_CONTENTS(int i) {
			return getToken(DmeParser.RESOURCE_CONTENTS, i);
		}
		public ResourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource; }
	}

	public final ResourceContext resource() throws RecognitionException {
		ResourceContext _localctx = new ResourceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_resource);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(RESOURCE_BEGIN);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RESOURCE_CONTENTS) {
				{
				{
				setState(97);
				match(RESOURCE_CONTENTS);
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(RESOURCE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class String_contentsContext extends ParserRuleContext {
		public String_contentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_contents; }
	 
		public String_contentsContext() { }
		public void copyFrom(String_contentsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class String_contents_placeholderContext extends String_contentsContext {
		public String_expression_beginContext string_expression_begin() {
			return getRuleContext(String_expression_beginContext.class,0);
		}
		public TerminalNode END_CODE_EXPR() { return getToken(DmeParser.END_CODE_EXPR, 0); }
		public String_contents_placeholderContext(String_contentsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class String_contents_expressionContext extends String_contentsContext {
		public String_expressionContext string_expression() {
			return getRuleContext(String_expressionContext.class,0);
		}
		public String_contents_expressionContext(String_contentsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class String_contents_literalContext extends String_contentsContext {
		public TerminalNode STRING_CONTENTS() { return getToken(DmeParser.STRING_CONTENTS, 0); }
		public String_contents_literalContext(String_contentsContext ctx) { copyFrom(ctx); }
	}

	public final String_contentsContext string_contents() throws RecognitionException {
		String_contentsContext _localctx = new String_contentsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_string_contents);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new String_contents_literalContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(STRING_CONTENTS);
				}
				break;
			case 2:
				_localctx = new String_contents_expressionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				string_expression();
				}
				break;
			case 3:
				_localctx = new String_contents_placeholderContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				string_expression_begin();
				setState(108);
				match(END_CODE_EXPR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class String_expressionContext extends ParserRuleContext {
		public String_expression_beginContext string_expression_begin() {
			return getRuleContext(String_expression_beginContext.class,0);
		}
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public TerminalNode END_CODE_EXPR() { return getToken(DmeParser.END_CODE_EXPR, 0); }
		public String_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_expression; }
	}

	public final String_expressionContext string_expression() throws RecognitionException {
		String_expressionContext _localctx = new String_expressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_string_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			string_expression_begin();
			setState(113);
			code_block();
			setState(114);
			match(END_CODE_EXPR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class String_expression_beginContext extends ParserRuleContext {
		public TerminalNode BEGIN_STRING_EXPRESSION() { return getToken(DmeParser.BEGIN_STRING_EXPRESSION, 0); }
		public TerminalNode BEGIN_ML_STRING_EXPRESSION() { return getToken(DmeParser.BEGIN_ML_STRING_EXPRESSION, 0); }
		public String_expression_beginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_expression_begin; }
	}

	public final String_expression_beginContext string_expression_begin() throws RecognitionException {
		String_expression_beginContext _localctx = new String_expression_beginContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_string_expression_begin);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_la = _input.LA(1);
			if ( !(_la==BEGIN_ML_STRING_EXPRESSION || _la==BEGIN_STRING_EXPRESSION) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Code_exprContext extends ParserRuleContext {
		public TerminalNode START_CODE_EXPR() { return getToken(DmeParser.START_CODE_EXPR, 0); }
		public TerminalNode END_CODE_EXPR() { return getToken(DmeParser.END_CODE_EXPR, 0); }
		public List<CodeContext> code() {
			return getRuleContexts(CodeContext.class);
		}
		public CodeContext code(int i) {
			return getRuleContext(CodeContext.class,i);
		}
		public Code_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_expr; }
	}

	public final Code_exprContext code_expr() throws RecognitionException {
		Code_exprContext _localctx = new Code_exprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_code_expr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(START_CODE_EXPR);
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(119);
					code();
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			setState(125);
			match(END_CODE_EXPR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Code_blockContext extends ParserRuleContext {
		public List<CodeContext> code() {
			return getRuleContexts(CodeContext.class);
		}
		public CodeContext code(int i) {
			return getRuleContext(CodeContext.class,i);
		}
		public Code_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_block; }
	}

	public final Code_blockContext code_block() throws RecognitionException {
		Code_blockContext _localctx = new Code_blockContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_code_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(128); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(127);
					code();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(130); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeContext extends ParserRuleContext {
		public List<Code_literalContext> code_literal() {
			return getRuleContexts(Code_literalContext.class);
		}
		public Code_literalContext code_literal(int i) {
			return getRuleContext(Code_literalContext.class,i);
		}
		public TerminalNode START_CODE_EXPR() { return getToken(DmeParser.START_CODE_EXPR, 0); }
		public TerminalNode END_CODE_EXPR() { return getToken(DmeParser.END_CODE_EXPR, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ResourceContext resource() {
			return getRuleContext(ResourceContext.class,0);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_code);
		try {
			int _alt;
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(132);
						code_literal();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(135); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				match(START_CODE_EXPR);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				match(END_CODE_EXPR);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(139);
				string();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(140);
				resource();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
